--- a/Dockerfile_build_ubuntu64
+++ b/Dockerfile_build_ubuntu64
@@ -1,9 +1,10 @@
-FROM quay.io/influxdb/cross-builder:go1.19.4-cb1343dd74ecba8ec07fe810195530a0b9055aa9
-
+#FROM quay.io/influxdb/cross-builder:go1.19.4-cb1343dd74ecba8ec07fe810195530a0b9055aa9
+FROM cr.loongnix.cn/influxdb/cross-builder:go1.19.7-main
+#FROM cr.loongnix.cn/library/golang
 # This dockerfile is capabable of performing all
 # build/test/package/deploy actions needed for Kapacitor.
 
-MAINTAINER support@influxdb.com
+MAINTAINER yangzewei@loongson.cn
 
 RUN apt-get -qq update && apt-get -qq install -y \
     software-properties-common \
@@ -24,25 +25,56 @@ RUN apt-get -qq update && apt-get -qq install -y \
     libtool
 
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-
+#RUN apt-get install golang-1.19
 RUN gem install fpm
+ENV GOPROXY="https://goproxy.cn,direct"
+ENV GOPATH /go
+ENV PATH $GOPATH/bin:/usr/local/go/bin:$PATH
+#RUN go install github.com/influxdata/pkg-config@latest
+#RUN go install github.com/influxdata/flux@v0.171.0
 
 # Install protobuf3 python library
 # NOTE: PROTO_VERSION env var is inherited from the cross-builder image.
-RUN wget -q https://github.com/google/protobuf/releases/download/v${PROTO_VERSION}/protobuf-python-${PROTO_VERSION}.tar.gz \
-    && tar -xf protobuf-python-${PROTO_VERSION}.tar.gz \
-    && cd protobuf-${PROTO_VERSION}/python \
+# PROTOBUF_VERSION 3.17.3
+# RUN wget -q https://github.com/google/protobuf/releases/download/v${PROTO_VERSION}/protobuf-python-${PROTO_VERSION}.tar.gz \
+ENV http_proxy=http://10.130.0.20:7890
+ENV https_proxy=http://10.130.0.20:7890
+
+RUN wget -q https://github.com/yzewei/protobuf/releases/download/v3.17.3/protobuf-3.17.3.tar.gz \
+    && tar -xf protobuf-3.17.3.tar.gz \
+    && cd protobuf/python \
     && python2 setup.py install \
     && python3 setup.py install \
     && cd ../../ \
-    && rm -rf /protobuf-${PROTO_VERSION} protobuf-python-${PROTO_VERSION}.tar.gz
+    && rm -rf /protobuf protobuf-3.17.3.tar.gz
+
+ENV PKG_CONFIG_PATH="/usr/local/lib/pkgconfig/"
+#RUN echo "prefix=/usr/local/" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "exec_prefix=\${prefix}" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "libdir=\${prefix}/lib" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "includedir=\${prefix}/include" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "Name: flux" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "Description: A description of flux" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "Version: 0.171.0" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "Libs: -L\${libdir} -lflux" >> /usr/lib/pkgconfig/flux.pc \
+#    && echo "Cflags: -I\${includedir}" >> /usr/lib/pkgconfig/flux.pc
+ENV CGO_CFLAGS="-I/go/pkg/mod/github.com/influxdata/flux@v0.171.0/libflux/include"
+ENV CGO_LDFLAGS="-L/usr/local/lib/libflux.so"
+ENV LD_LIBRARY_PATH="/usr/local/lib/"
+RUN which -a pkg-config
+#COPY /usr/local/bin/fluxc /usr/local/bin/fluxc
+#COPY /usr/local/lib64/libflux.so /usr/local/lib/libflux.so
+RUN unset http_proxy
+RUN unset https_proxy
 
 ENV PROJECT_DIR /kapacitor
 RUN mkdir -p $PROJECT_DIR
 WORKDIR $PROJECT_DIR
 
+
 # Configure local git
 RUN git config --global user.email "support@influxdb.com"
 RUN git config --global user.Name "Docker Builder"
-
+ENV PATH=/usr/lib/go-1.19/bin:$PATH
 ENTRYPOINT [ "/kapacitor/build.py" ]
